--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -25,7 +25,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
-				<Option parameters="testANdMP2 configs/testBucketCapacity.json" />
+				<Option parameters="testANdMPWithBias configs/testBucketCapacity.json -bias" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="commons" />
@@ -64,7 +64,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
-				<Option parameters="testANdMP2 configs/testBucketCapacity.json" />
+				<Option parameters="testANdMPWithBias configs/testBucketCapacity.json -bias" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
