--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -153,7 +153,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
-				<Option parameters="dataPreProcessor configs/defaultMaster.json" />
+				<Option parameters="srMaster configs/defaultMaster.json" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="commons" />
@@ -167,7 +167,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
-				<Option parameters="testDistIndexer" />
+				<Option parameters="dataPreProcessor configs/defaultMaster.json" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
