--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -149,7 +149,7 @@
 				</Compiler>
 			</Target>
 			<Target title="ReleaseDistIndexing">
-				<Option output="bin/Release/runIndexer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/distIndexer" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
@@ -163,11 +163,11 @@
 				</Linker>
 			</Target>
 			<Target title="DebugDistIndexing">
-				<Option output="bin/Debug/runIndexer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/distIndexer" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
-				<Option parameters="dataPreProcessor configs/defaultMaster.json" />
+				<Option parameters="srMaster configs/defaultMaster.json" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
@@ -187,7 +187,7 @@
 			<Add directory="/home/amourao/code/sparsereconstruction/" />
 		</Compiler>
 		<Linker>
-			<Add option="-fopenmp -lhdf5 -lflann -ljsoncpp -lopencv_core -lopencv_imgproc -lopencv_calib3d -lopencv_video -lopencv_photo -lopencv_features2d -lopencv_ml -lopencv_highgui -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_nonfree -lfftw3f -lfftw3 -lm -lopencv_legacy -lopencv_flann -larmadillo -llapack -lblas -lPocoFoundation -lPocoData -lPocoDataSQLite -lPocoNet -lPocoXML -lPocoJSON -lPocoUtil -lcurl -lpugixml -ldb -ldb_cxx" />
+			<Add option="-fopenmp -lhdf5 -lflann -ljsoncpp -lopencv_core -lopencv_imgproc -lopencv_calib3d -lopencv_video -lopencv_photo -lopencv_features2d -lopencv_ml -lopencv_highgui -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_nonfree -lfftw3f -lfftw3 -lm -lopencv_legacy -lopencv_flann -larmadillo -llapack -lblas -lPocoFoundation -lPocoData -lPocoDataSQLite -lPocoNet -lPocoXML -lPocoJSON -lPocoUtil -lcurl -lpugixml -ldb -ldb_cxx  -fopenmp" />
 			<Add directory="/localstore/searchservices/libs/lib/" />
 			<Add directory="/localstore/searchservices/libs/include/" />
 			<Add directory="/home/amourao/code/sparsereconstruction/" />
