--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -100,7 +100,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_compiler_49" />
-				<Option parameters=" dataPreProcessorOneBillionAzure /home/amourao/code/searchservices/configs/defaultProcessBillion.json" />
+				<Option parameters=" sortBucketsFromBillion /home/amourao/code/searchservices/configs/defaultMergeProcessBillion.json" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
