--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -2726,30 +2726,10 @@
 			<Option target="ReleaseDistIndexingSingle" />
 		</Unit>
 		<Unit filename="rest/Endpoints/codebits/Codebits.cpp">
-			<Option target="ReleaseMainInd" />
-			<Option target="ReleaseMainAna" />
-			<Option target="ReleaseServer" />
-			<Option target="DebugMainInd" />
-			<Option target="DebugMainAna" />
-			<Option target="DebugServer" />
-			<Option target="ReleaseEusipco" />
-			<Option target="DebugEusipco" />
-			<Option target="ReleaseDistIndexing" />
-			<Option target="DebugDistIndexing" />
-			<Option target="ReleaseDistIndexingSingle" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="rest/Endpoints/codebits/Codebits.h">
-			<Option target="ReleaseMainInd" />
-			<Option target="ReleaseMainAna" />
-			<Option target="ReleaseServer" />
-			<Option target="DebugMainInd" />
-			<Option target="DebugMainAna" />
-			<Option target="DebugServer" />
-			<Option target="ReleaseEusipco" />
-			<Option target="DebugEusipco" />
-			<Option target="ReleaseDistIndexing" />
-			<Option target="DebugDistIndexing" />
-			<Option target="ReleaseDistIndexingSingle" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="rest/Endpoints/database/GetMetadata.cpp">
 			<Option target="ReleaseMainInd" />
