Finished converting code to opencv 3.1.0, arma 6.700.6, poco 1.7.3

--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -205,14 +205,11 @@
 			<Add option="-DUSE_GIST" />
 			<Add option="-DSTANDALONE_GIST" />
 			<Add option="-DPOCO_NO_FPENVIRONMENT" />
-			<Add directory="/localstore/searchservices/libs/include/" />
 			<Add directory="/home/amourao/code/sparsereconstruction/" />
+			<Add directory="/nas/Public/amourao/code/sparsereconstruction/" />
 		</Compiler>
 		<Linker>
-			<Add option="-fopenmp -lhdf5 -lflann -ljsoncpp -lopencv_core -lopencv_imgproc -lopencv_calib3d -lopencv_video -lopencv_photo -lopencv_features2d -lopencv_ml -lopencv_highgui -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_nonfree -lfftw3f -lfftw3 -lm -lopencv_legacy -lopencv_flann -larmadillo -llapack -lblas -lPocoFoundation -lPocoData -lPocoDataSQLite -lPocoNet -lPocoXML -lPocoJSON -lPocoUtil -lcurl -lpugixml -ldb -ldb_cxx  -fopenmp" />
-			<Add directory="/localstore/searchservices/libs/lib/" />
-			<Add directory="/localstore/searchservices/libs/include/" />
-			<Add directory="/home/amourao/code/sparsereconstruction/" />
+			<Add option="-fopenmp -ljsoncpp -lopencv_core -lopencv_imgproc -lopencv_calib3d -lopencv_video -lopencv_photo -lopencv_features2d -lopencv_xfeatures2d -lopencv_ml -lopencv_highgui -lopencv_objdetect -lfftw3 -lfftw3f -lm -lopencv_flann -larmadillo -lPocoFoundation -lPocoData -lPocoDataSQLite -lPocoNet -lPocoXML -lPocoJSON -lPocoUtil -lcurl -ldb -ldb_cxx  -fopenmp" />
 		</Linker>
 		<Unit filename="analyser/FactoryAnalyser.cpp">
 			<Option target="ReleaseMainInd" />
@@ -1426,17 +1423,7 @@
 		<Unit filename="analyser/tools/ShotDetector.cpp" />
 		<Unit filename="analyser/tools/ShotDetector.h" />
 		<Unit filename="analyser/tools/TestFunctions.cpp">
-			<Option target="ReleaseMainInd" />
-			<Option target="ReleaseMainAna" />
-			<Option target="ReleaseServer" />
-			<Option target="DebugMainInd" />
-			<Option target="DebugMainAna" />
-			<Option target="DebugServer" />
-			<Option target="ReleaseEusipco" />
-			<Option target="DebugEusipco" />
-			<Option target="ReleaseDistIndexing" />
-			<Option target="DebugDistIndexing" />
-			<Option target="ReleaseDistIndexingSingle" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="analyser/tools/TrainTestFeaturesTools.cpp">
 			<Option target="ReleaseMainInd" />
